# HIPE

./: .gitignore  Install.md  LICENCE_AGPL.txt  LICENCE_AGPL_short.txt  LICENSE-CORE.txt  LICENSE-MODULES.txt  README.md  Readme.md  Readme.md.bak  add_header.py  compile-ALL.bat  compile-ALL.sh  package-ALL.bat  startHipe.bat  startHipe.sh
Hipe/: CMakeLists.txt  HipeTree.cpp  OwnerConfigPath.cmake  Readme.md  boost_config.cmake  compile-ALL.bat  compile.bat  compile.sh  dlib_config.cmake  ffmpeg_config.cmake  json.txt  libuv_config.cmake  live_config.cmake  package.bat  sourcey_config.cmake  x264_config.cmake
Hipe/Documentation/: Guideline Developement Version 1.0.docx
Hipe/Documentation/diagrams/: hype.vpp  hype.vux
Hipe/Documentation/doxygen/: Doxyfile
Hipe/cmake/: OwnerConfigPath.cmake  WindowsDownloadPrebuiltDependencies.cmake  boost_config.cmake  common_config.cmake  common_functions_and_macros.cmake  dlib_config.cmake  ffmpeg_config.cmake  getDependencies.cmake  hipe_external_config.cmake  hipecore_config.cmake  libuv_config.cmake  livemedia_config.cmake  opencv_config.cmake  postInstall.cmake  python27_config.cmake  sourcey_config.cmake  webrtc_config.cmake  x264_config.cmake
Hipe/header/core/: Delegate.h  HipeException.h  HipeNativeTypes.h  HipeStatus.h  HipeStatus.h.orig  Invoker.h  JsonTree.h  Localenv.h  Logger.h  ModuleLoader.h  Singleton.h  StringTools.h  StringTools.h.orig  base64.h  core_export.h  misc.h  osdependant.h  version.h
Hipe/header/coredata/: ConnexData.h  Data.h  DataAccess.h  DataPort.h  IOData.h  IODataType.h  NoneData.h  OutputData.h  data_export.h
Hipe/header/corefilter/: IFilter.h  Model.h  filter_export.h
Hipe/header/data/: CircleData.h  Composer.h  ConnexData.h  Data.h  DataAccess.h  DataPort.h  DirPatternData.cpp  DirPatternData.h  DirectoryImgData.h  DlibDetectorData.h  FileImageData.h  FileVideoInput.h  IOData.h  IODataType.h  ImageArrayData.h  ImageData.h  ImageEncodedData.h  ListIOData.h  MatcherData.h  NoneData.h  OutputData.h  OutputFilter.h  PatternData.h  PointData.h  PyContextData.h  ShapeData.h  SquareCrop.h  StreamVideoInput.h  TextData.h  VideoData.h  data_export.h
Hipe/header/filter/: EntryPoint.h  IFilter.h  Model.h  OrderCircles.h  PythonFilter.h  References.h.cmp  References.h_test  Source.cpp
Hipe/header/hipe_server/: Configuration.h
Hipe/header/http/: AbstractJsonTree.h  ClientTest.hpp  CommandExecuter.cpp  CommandExecuter.h  CommandManager.h  Config.h  Content.h  HttpClient.h  HttpParams.h  HttpRequest.h  HttpServer.h  HttpServer.hpp  HttpTask.h  JsonFilterTree.h  JsonTree.h  Request.h  Response.h  Server.h  crypto.hpp
Hipe/header/json/: JsonBuilder.h  JsonTree.h  PtreeIterator.h  json_export.h
Hipe/header/orchestrator/: Composer.h  Orchestrator.h  OrchestratorTask.h  Orchestrator_.h  TaskInfo.h  orchestrator_export.h
Hipe/header/pydata/: pyConnexData.h  pyConverterData.h  pyData.h  pyFilterData.h  pyImageData.h  pydata_export.h
Hipe/header/streaming/: CaptureVideo.h  H264LiveServerMediaSession.h  LiveSourceWithx264.h  NetworkVideoStream.h  RTSPCapture.h  Streaming.h  streaming_export.h  x264Encoder.h
Hipe/header/streaming_rtsp/: FFmpegDecoder.h  FFmpegH264Encoder.h  FFmpegH264Source.h  FFmpegOpencvDecoder.h  LiveRTSPServer.h  LiveServerMediaSubsession.h
Hipe/modules/: CMakeLists.txt  compile.bat
Hipe/modules/cmake/: FindGlog.cmake  FindOpenblas.cmake  FindProtobuf.cmake  common_functions_and_macros.cmake  filter.vcxproj.user.in  hipe_external_config.cmake  hipecore_config.cmake  python27_config.cmake
Hipe/modules/source/: CMakeLists.txt
Hipe/scripts/: gdbinit  headerList.bat  headerList.sh  startHipe.bat  startHipe.bat.in  startHipe.sh.in  startweb.bat
Hipe/source/: CMakeLists.txt
Hipe/source/FFmpegRTSPServer/: CMakeLists.txt  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegH264Encoder.cpp  FFmpegH264Encoder.h  FFmpegH264Source.cpp  FFmpegH264Source.h  LiveRTSPServer.cpp  LiveRTSPServer.h  main.cpp
Hipe/source/core/: CMakeLists.txt  HipeException.cpp  JsonTree.cpp  LocalEnv.cpp  Logger.cpp  StringTools.cpp  StringTools.cpp.orig  base64.cpp  misc.cpp  version.cpp  version.cpp.orig
Hipe/source/coredata/: CMakeLists.txt  ConnexData.cpp  Data.cpp  DataPort.cpp  IODataType.cpp  NoneData.cpp  OutputData.cpp
Hipe/source/corefilter/: CMakeLists.txt  IFilter.cpp
Hipe/source/data/: CMakeLists.txt  CircleData.cpp  Composer.cpp  ConnexData.cpp  Data.cpp  DataPort.cpp  DirPatternData.cpp  DirectoryImgData.cpp  DlibDetectorData.cpp  FileImageData.cpp  FileVideoInput.cpp  IODataType.cpp  ImageData.cpp  MatcherData.cpp  NoneData.cpp  OutputData.cpp  PatternData.cpp  PyContextData.cpp  ShapeData.cpp  SquareCrop.cpp  StreamVideoInput.cpp  VideoData.cpp
Hipe/source/exception/: CMakeLists.txt
Hipe/source/ffmpegRecorder/: CMakeLists.txt  main.cpp
Hipe/source/filter/: CMakeLists.txt  ComputeRegularGrid.cpp  IFilter.cpp  dllmain.cpp
Hipe/source/hipe_server/: CMakeLists.txt  main.cpp  (+1 more)
Hipe/tests/: CMakeLists.txt  boost_config_tests.cmake
source-core/: CMakeLists.txt  compile.bat  compile.sh  package.bat
source-core/cmake/: WindowsDownloadPrebuiltDependencies.cmake  boost_config.cmake  common_config.cmake  common_functions_and_macros.cmake  getDependencies.cmake  hipe_external_config.cmake  installConfig.cmake  list_dependencies.cmake  opencv_config.cmake  postInstall.cmake  python27_config.cmake  python36_config.cmake
source-core/source/: CMakeLists.txt
source-modules/: CMakeLists.txt  compile-stage.bat  compile.bat  compile.sh
source-modules/cmake/: DownloadSampleDependencies.cmake  FindGlog.cmake  FindOpenblas.cmake  FindProtobuf.cmake  boost_config.cmake  common_config.cmake  common_functions_and_macros.cmake  dlib_config.cmake  filter.vcxproj.user.in  getDependencies.cmake  hipe_external_config.cmake  hipecore_config.cmake  installConfig.cmake  list_dependencies.cmake  livemedia_config.cmake  opencv_config.cmake  postInstall.cmake  python27_config.cmake  python36_config.cmake
source-modules/source/: CMakeLists.txt
tests/: CMakeLists.txt
tests/source/: ClientTest.hpp  main.cpp
(+2411 files in other folders)
